Intégration du menu
Intégration du menu principal et des options. Il suffit de cliquer sur
le niveau pour le lancer.
Par la suite, je finis la GUI des options et le mécanisme de sauvegarde
et chargement. Les futurs changements se feront directement sur le
master.

--- a/Demo/temp.qrc
+++ b/Demo/temp.qrc
@@ -4,5 +4,8 @@
         <file>ressources/img/unit.png</file>
         <file>ressources/levels/leveld/level.json</file>
         <file>ressources/levels/leveld/tileset.png</file>
+        <file>ressources/img/button.png</file>
+        <file>ressources/img/disc.png</file>
+        <file>ressources/img/logo.png</file>
     </qresource>
 </RCC>
