--- a/Demo/temp.qrc
+++ b/Demo/temp.qrc
@@ -14,4 +14,10 @@
         <file>ressources/img/play.png</file>
         <file>ressources/img/close.png</file>
     </qresource>
+    <qresource prefix="/boost">
+        <file>ressources/img/Boost/trap_anim1.png</file>
+        <file>ressources/img/Boost/trap_anim2.png</file>
+        <file>ressources/img/Boost/trap_anim3.png</file>
+        <file>ressources/img/Boost/trap_on.png</file>
+    </qresource>
 </RCC>
